client/styles/style.css
/*****************
      HOME
*****************/

#list-table {
  margin-bottom: 50px;
  margin-top: 50px;
}

#movie-list {
  height: 75px;
  background-color: #98A8B6;
  padding-top: 20px;
  margin-bottom: 2px;
}

#movie-list:hover {
  background-color: #578FC3;
  cursor: default;
}


.submit-button {
  background-color: #578FC3;
}

.movie-center {
  text-align: center;
}

/*****************
      INDEX
*****************/

#main-nav {
  background-color: #578FC3;
}

#main-nav a {
  color: white;
}

#title {
  width: 100%;
  text-align: center;
  padding: 5px 0px;
}

#title a{
  font-weight: bold;
}

/*
#title a:focus{
  text-decoration:none;
}
*/
#title a:hover{
  text-decoration:none;
}

.navigation {
  width: 100%;
  height: 40px;
  background-color: #eee;
}

.navigation ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

.navigation li {
  float: left;
}

.navigation li a {
  width: 100px;
  /*height: 20px;*/
  height:100%;
  line-height: 20px;
  padding: 10px;
  display: block;
  text-align: center;
  text-decoration: none;
}

.navigation li a:hover {
  background-color: #4682B6;
}

.navigation li a.selected {
  background-color: #ccc;
}

#videoContainer{
  text-align: center;
  background-color: black;
}

#commentForm{
  /*margin: 15px;*/
  /*float: left;*/
  width: 85%;
  /*display: inline-block;*/
}
#commentForm .text{

  width:50%;
  text-align: center;

}

#commentContainer{
  width: 100%;
  min-height: 150px;
  overflow:auto;
  background-color:black;
  opacity: 0.8;
  text-align:center;
  color:white;
}

#commentContainer .belongsToUser{
  color: red;
}

.textBubble{
  color: green;

}

/*.container{
  text-align:center;
  padding:20px;
}*/

#searchContainer input{
  width: 400px;
  text-align: center;
}


/*controllers styling for the timeGraph*/
.placeHolder{
  height:30px;
  widht:100px;
}
.chart{
  position:absolute;
  width:100%;
  padding: 0px 0px 0px 6%;
  /*top:535px;*/
  /*left:12px;*/
}

.chart div {
  background-color: steelblue;
  padding: 1px;
  margin: 1px;
  color: white;
  display:inline-block;
  opacity:1;
  z-index:500;
}


.commentHover{
  position:relative;
  display:block;
  background-color: steelblue;
  border-radius: 2px;
  color: white;
  /*text:white;*/
  font-size:10pt;

